[tool.poetry]
name = "liliput-api"
version = "0.1.0"
description = ""
authors = ["yumubi <shaman2077c@163.com>"]
readme = "README.md"
packages = [{include = "liliput_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
